// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Heading Block <Save /> snapshot 001: 最小限の属性 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
  >
    カスタム見出し
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 002: レベル1の見出し 1`] = `
<DocumentFragment>
  <h1
    class="ystdb-custom-heading"
  >
    カスタム見出し H1
  </h1>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 003: レベル3の見出し 1`] = `
<DocumentFragment>
  <h3
    class="ystdb-custom-heading"
  >
    カスタム見出し H3
  </h3>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 004: プリセットフォントサイズの反映はBlock Supportsに任せる 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-large-font-size"
  >
    フォントサイズ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 005: 任意フォントサイズの反映はBlock Supportsに任せる 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="font-size: 2em;"
  >
    カスタムフォントサイズ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 006: レスポンシブフォントサイズ指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    レスポンシブフォントサイズ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 007: テキスト中央揃え 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-text-align-center"
  >
    テキストセンター揃え
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 008: テキスト右揃え 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-text-align-right"
  >
    テキスト右揃え
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 010: 複数属性の組み合わせ 1`] = `
<DocumentFragment>
  <h3
    class="ystdb-custom-heading has-text-align-center has-large-font-size"
  >
    全属性指定
  </h3>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 011: カスタムフォントサイズとレスポンシブフォントサイズの組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-text-align-center"
    style="font-size: 2em; --ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    カスタム＆レスポンシブ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 012: プリセットと任意フォントサイズの組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-large-font-size"
    style="font-size: 3em;"
  >
    fontSize優先
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 013: プリセットとレスポンシブフォントサイズの組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-large-font-size"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    fontSize優先
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 014: プリセット、任意値、レスポンシブ値の組み合わせ 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-large-font-size"
    style="font-size: 3em; --ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    fontSize優先
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 015: レスポンシブフォントサイズ（desktopのみ） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem;"
  >
    デスクトップのみ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 016: レスポンシブフォントサイズ（tabletのみ） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--tablet--heading--font-size: 1.5rem;"
  >
    タブレットのみ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 017: レスポンシブフォントサイズ（mobileのみ） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--mobile--heading--font-size: 1.2rem;"
  >
    モバイルのみ
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 018: レスポンシブフォントサイズ（desktop + tablet） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--tablet--heading--font-size: 1.5rem;"
  >
    デスクトップ＋タブレット
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 019: レスポンシブフォントサイズ（desktop + mobile） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--desktop--heading--font-size: 2rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    デスクトップ＋モバイル
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 020: レスポンシブフォントサイズ（tablet + mobile） 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="--ystdb--tablet--heading--font-size: 1.5rem; --ystdb--mobile--heading--font-size: 1.2rem;"
  >
    タブレット＋モバイル
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 021: 文字色追加(クラス) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-ys-blue-color has-text-color"
  >
    文字色class指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 022: 文字色追加(カスタム) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-text-color"
    style="color: rgb(255, 0, 0);"
  >
    文字色カスタム指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 023: 文字太さ(400) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="font-weight: 400;"
  >
    文字太さ指定(400)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 024: 文字太さ(700) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="font-weight: 700;"
  >
    文字太さ指定(700)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 025: 文字スタイル(italic) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="font-style: italic;"
  >
    文字スタイル指定(italic)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 026: 文字スタイル(normal) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="font-style: normal;"
  >
    文字スタイル指定(normal)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 027: 文字間隔指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="letter-spacing: 0.1em;"
  >
    文字間隔指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 028: 行の高さ指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="line-height: 1.8;"
  >
    行の高さ指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 029: 行の高さ指定(0指定) 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="line-height: 0;"
  >
    行の高さ指定(0指定)
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 030: フォントファミリー指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="font-family: Arial, sans-serif;"
  >
    フォントファミリー指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 031: 外側余白と内側余白指定 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading"
    style="margin-top: 1rem; margin-bottom: 2rem; padding-left: var(--wp--preset--spacing--40); padding-right: 3rem; --ystdb--desktop--custom-heading--margin-top: 4rem; --ystdb--mobile--custom-heading--padding-bottom: 5rem;"
  >
    余白指定
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 032: サブテキストあり 1`] = `
<DocumentFragment>
  <hgroup
    class="ystdb-custom-heading-group"
  >
    <h2
      class="ystdb-custom-heading"
    >
      メインテキスト
    </h2>
    <p
      class="ystdb-custom-heading-sub"
    >
      サブテキスト
    </p>
  </hgroup>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 033: サブテキスト設定を無効にした場合は見出し単体を維持する 1`] = `
<DocumentFragment>
  <h3
    class="ystdb-custom-heading"
  >
    メインテキスト
  </h3>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 034: サブテキストありでもBlock Supportsを見出しへ適用する 1`] = `
<DocumentFragment>
  <hgroup
    class="ystdb-custom-heading-group"
  >
    <h2
      class="ystdb-custom-heading has-large-font-size has-ys-blue-color has-text-color"
      style="margin-top: 1rem;"
    >
      メインテキスト
    </h2>
    <p
      class="ystdb-custom-heading-sub"
    >
      サブテキスト
    </p>
  </hgroup>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 035: リンク色を見出しへ適用する 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-link-color"
    style="--wp--style--color--link: var(--wp--preset--color--ys-blue);"
  >
    リンクを含む見出し
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 036: メインテキストへ枠線と角丸を適用する 1`] = `
<DocumentFragment>
  <h2
    class="ystdb-custom-heading has-border-color"
    style="border-color: rgb(17, 17, 17); border-style: solid; border-width: 1px; border-radius: 8px;"
  >
    枠線付き見出し
  </h2>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 037: サブテキストと見出しグループへ独自スタイルを適用する 1`] = `
<DocumentFragment>
  <hgroup
    class="ystdb-custom-heading-group has-background"
    style="background-color: rgb(247, 247, 247); margin-top: 2rem; margin-bottom: 2rem; padding-top: 1rem; padding-bottom: 1rem; border-radius: 12px;"
  >
    <h2
      class="ystdb-custom-heading"
    >
      メインテキスト
    </h2>
    <p
      class="ystdb-custom-heading-sub has-text-color has-border-color"
      style="font-size: var(--wp--preset--font-size--small); font-weight: 700; color: rgb(51, 51, 51); padding-left: 1rem; padding-right: 1rem; border-color: rgb(204, 204, 204); border-style: solid; border-width: 1px; border-radius: 4px;"
    >
      サブテキスト
    </p>
  </hgroup>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 038: 見出しグループを横並びにしてブロック間隔を適用する 1`] = `
<DocumentFragment>
  <hgroup
    class="ystdb-custom-heading-group is-horizontal"
    style="gap: var(--wp--preset--spacing--40);"
  >
    <h2
      class="ystdb-custom-heading"
    >
      メインテキスト
    </h2>
    <p
      class="ystdb-custom-heading-sub"
    >
      サブテキスト
    </p>
  </hgroup>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 039: 見出しグループへ配置設定を適用する 1`] = `
<DocumentFragment>
  <hgroup
    class="ystdb-custom-heading-group"
    style="align-items: center; justify-content: space-between;"
  >
    <h2
      class="ystdb-custom-heading"
    >
      メインテキスト
    </h2>
    <p
      class="ystdb-custom-heading-sub"
    >
      サブテキスト
    </p>
  </hgroup>
</DocumentFragment>
`;

exports[`Custom Heading Block <Save /> snapshot 040: サブテキストと見出しグループへレスポンシブ設定を適用する 1`] = `
<DocumentFragment>
  <hgroup
    class="ystdb-custom-heading-group"
    style="--ystdb--tablet--custom-heading-group--margin-top: 3rem; --ystdb--desktop--custom-heading-group--block-gap: 1rem; --ystdb--mobile--custom-heading-group--flex-direction: row; --ystdb--mobile--custom-heading-group--align-items: baseline; --ystdb--mobile--custom-heading-group--justify-content: center;"
  >
    <h2
      class="ystdb-custom-heading"
    >
      メインテキスト
    </h2>
    <p
      class="ystdb-custom-heading-sub"
      style="--ystdb--tablet--custom-heading-sub--font-size: 1rem; --ystdb--mobile--custom-heading-sub--padding-left: 2rem;"
    >
      サブテキスト
    </p>
  </hgroup>
</DocumentFragment>
`;
